--- a/pom.xml
+++ b/pom.xml
@@ -39,5 +39,18 @@
         <version>3.9.1</version>
     </dependency>
 
+    <dependency>
+        <groupId>io.lettuce</groupId>
+        <artifactId>lettuce-core</artifactId>
+        <version>6.2.5.RELEASE</version>
+    </dependency>
+
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.15.2</version>
+    </dependency>
+
+
 </dependencies>
 </project>
